--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "firebase": "^12.0.0",
+    "firebase-admin": "^13.4.0",
     "firebase-tools": "^14.11.2",
     "qunit": "^2.24.1"
   }
